--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Language Switcher -->
     <div class="language-switcher">
         <div class="language-buttons">
-            <button class="lang-btn active" data-lang="fr">Не дави🚫</button>
+            <button class="lang-btn active" data-lang="fr">Potential risk🚫</button>
             <button class="lang-btn" data-lang="en">🇬🇧 English</button>
             <button class="lang-btn" data-lang="ar">🇲🇷 العربية</button>
         </div>
@@ -30,7 +30,7 @@
                     </div>
                     <div class="profile-info">
                         <h1 class="name">Sid'Ahmed Mohamed Ejehah</h1>
-                        <p class="title" data-fr="Expert en Cybersécurité et Spécialiste IA" data-en="Cybersecurity Expert & AI Specialist" data-ar="متخصص مبتدئ في مجال الأمن السيبراني والذكاء الاصطناعي">Entry-level cybersecurity and artificial intelligence specialist</p>
+                        <p class="title" data-fr="انت المسؤول الأول عن ما يمكن أن يحدث بعد ضغطك عل ذالك الزر" data-en="Cybersecurity Expert & AI Specialist" data-ar="متخصص مبتدئ في مجال الأمن السيبراني والذكاء الاصطناعي">Entry-level cybersecurity and artificial intelligence specialist</p>
                     </div>
                 </div>
                 <div class="contact-info">
@@ -59,7 +59,7 @@
         <main class="main-content">
             <!-- Professional Summary -->
             <section class="section">
-                <h2 class="section-title" data-fr="Résumé Professionnel" data-en="Professional Summary" data-ar="الملخص المهني">Résumé Professionnel</h2>
+                <h2 class="section-title" data-fr="" data-en="Professional Summary" data-ar="الملخص المهني">Résumé Professionnel</h2>
                 <div class="section-content">
                     <p class="summary-text" 
                        data-fr=""
@@ -72,14 +72,14 @@
 
             <!-- Skills Section -->
             <section class="section">
-                <h2 class="section-title" data-fr="Compétences Techniques" data-en="Technical Skills" data-ar="المهارات التقنية">Compétences Techniques</h2>
+                <h2 class="section-title" data-fr="You are fully responsible for anything that happens after pressing that button" data-en="Technical Skills" data-ar="المهارات التقنية">Compétences Techniques</h2>
                 <div class="section-content">
                     <div class="skills-grid">
                         <div class="skill-category">
-                            <h3 class="skill-category-title" data-fr="Cybersécurité" data-en="Cybersecurity" data-ar="الأمن السيبراني">Cybersécurité</h3>
+                            <h3 class="skill-category-title" data-fr="" data-en="Cybersecurity" data-ar="الأمن السيبراني">Cybersécurité</h3>
                             <div class="skill-items">
-                                <span class="skill-item" data-fr="Tests d'Intrusion" data-en="Penetration Testing" data-ar="اختبار الاختراق">Tests d'Intrusion</span>
-                                <span class="skill-item" data-fr="Évaluation des Vulnérabilités" data-en="Vulnerability Assessment" data-ar="تقييم الثغرات الأمنية">Évaluation des Vulnérabilités</span>
+                                <span class="skill-item" data-fr="" data-en="Penetration Testing" data-ar="اختبار الاختراق">Tests d'Intrusion</span>
+                                <span class="skill-item" data-fr="" data-en="Vulnerability Assessment" data-ar="تقييم الثغرات الأمنية">Évaluation des Vulnérabilités</span>
                                 <span class="skill-item">Kali Linux</span>
                                 <span class="skill-item">Bug Bounty</span>
                                 <span class="skill-item">OWASP Top 10</span>
@@ -89,29 +89,29 @@
                             </div>
                         </div>
                         <div class="skill-category">
-                            <h3 class="skill-category-title" data-fr="Intelligence Artificielle" data-en="Artificial Intelligence" data-ar="الذكاء الاصطناعي">Intelligence Artificielle</h3>
+                            <h3 class="skill-category-title" data-fr="" data-en="Artificial Intelligence" data-ar="الذكاء الاصطناعي">Intelligence Artificielle</h3>
                             <div class="skill-items">
                                 <span class="skill-item">Machine Learning</span>
                                 <span class="skill-item">Deep Learning</span>
                                 <span class="skill-item">NLP</span>
                                 <span class="skill-item">TensorFlow</span>
                                 <span class="skill-item">PyTorch</span>
-                                <span class="skill-item" data-fr="Développement Chatbot" data-en="Chatbot Development" data-ar="تطوير روبوتات المحادثة">Développement Chatbot</span>
-                                <span class="skill-item" data-fr="Reconnaissance Vocale" data-en="Speech Recognition" data-ar="التعرف على الكلام">Reconnaissance Vocale</span>
-                                <span class="skill-item" data-fr="Synthèse Vocale" data-en="Text-to-Speech" data-ar="تحويل النص إلى كلام">Synthèse Vocale</span>
+                                <span class="skill-item" data-fr="" data-en="Chatbot Development" data-ar="تطوير روبوتات المحادثة">Développement Chatbot</span>
+                                <span class="skill-item" data-fr="" data-en="Speech Recognition" data-ar="التعرف على الكلام">Reconnaissance Vocale</span>
+                                <span class="skill-item" data-fr="" data-en="Text-to-Speech" data-ar="تحويل النص إلى كلام">Synthèse Vocale</span>
                             </div>
                         </div>
                         <div class="skill-category">
-                            <h3 class="skill-category-title" data-fr="Programmation" data-en="Programming" data-ar="البرمجة">Programmation</h3>
+                            <h3 class="skill-category-title" data-fr="" data-en="Programming" data-ar="البرمجة">Programmation</h3>
                             <div class="skill-items">
                                 <span class="skill-item">Python</span>
                                 <span class="skill-item">JavaScript</span>
                                 <span class="skill-item">Bash/Shell</span>
                                 <span class="skill-item">SQL</span>
                                 <span class="skill-item">Flask/Django</span>
-                                <span class="skill-item" data-fr="Développement API" data-en="API Development" data-ar="تطوير واجهات البرمجة">Développement API</span>
+                                <span class="skill-item" data-fr="" data-en="API Development" data-ar="تطوير واجهات البرمجة">Développement API</span>
                                 <span class="skill-item" data-fr="" data-en="" data-ar=""></span>
-                                <span class="skill-item" data-fr="Automatisation" data-en="Automation" data-ar="الأتمتة">Automatisation</span>
+                                <span class="skill-item" data-fr="" data-en="Automation" data-ar="الأتمتة">Automatisation</span>
                             </div>
                         </div>
                     </div>
@@ -120,19 +120,19 @@
 
             <!-- Experience Section -->
             <section class="section">
-                <h2 class="section-title" data-fr="Expérience Professionnelle" data-en="Professional Experience" data-ar="الخبرة المهنية">Expérience Professionnelle</h2>
+                <h2 class="section-title" data-fr="" data-en="Professional Experience" data-ar="الخبرة المهنية">Expérience Professionnelle</h2>
                 <div class="section-content">
                     <div class="experience-item">
                         <div class="experience-header">
-                            <h3 class="experience-title" data-fr="Tests d'Intrusion" data-en="Cybersecurity and Penetration Testing" data-ar="الأمن السيبراني و إختبار الإختراق">Tests d'Intrusion</h3>
-                            <span class="experience-duration" data-fr="1 An 4 Mois" data-en="1 Year 4 Months" data-ar="سنة و 4 أشهر">1 An 4 Mois</span>
+                            <h3 class="experience-title" data-fr="" data-en="Cybersecurity and Penetration Testing" data-ar="الأمن السيبراني و إختبار الإختراق"></h3>
+                            <span class="experience-duration" data-fr="" data-en="1 Year 4 Months" data-ar="سنة و 4 أشهر">1 An 4 Mois</span>
                         </div>
                         <div class="experience-details">
                             <ul class="experience-list">
-                                <li data-fr="Découverte de vulnérabilités critiques dans de grandes entreprises mondiales et locales (eBay, AliExpress)" data-en="Discovered critical vulnerabilities in major global and local companies (eBay, AliExpress...)" data-ar="اكتشاف ثغرات أمنية حرجة في شركات كبرى عالمية و محلية (eBay, AliExpress...)">Découverte de vulnérabilités critiques dans de grandes entreprises mondiales et locales (eBay, AliExpress...)</li>
-                                <li data-fr="Développement d'outils personnalisés pour automatiser les processus de tests d'intrusion" data-en="Developed custom tools for automating penetration testing processes" data-ar="تطوير ادوات مخصصة لأتمتة عمليات الإختراق">Développement d'outils personnalisés pour automatiser les processus de tests d'intrusion</li>
-                                <li data-fr="Préparation de rapports techniques détaillés pour les vulnérabilités découvertes" data-en="Prepared detailed technical reports for discovered vulnerabilities" data-ar="إعداد تقارير تقنية مفصلة للثغرات المكتشفة">Préparation de rapports techniques détaillés pour les vulnérabilités découvertes</li>
-                                <li data-fr="Participation active sur les plateformes Bug Bounty (HackerOne, HackTheBox)" data-en="Active participation in Bug Bounty platforms (HackerOne, HackTheBox)" data-ar="مشاركة نشطة في منصات Bug Bounty (HackerOne, HackTheBox)">Participation active sur les plateformes Bug Bounty (HackerOne, HackTheBox)</li>
+                                <li data-fr="" data-en="Discovered critical vulnerabilities in major global and local companies (eBay, AliExpress...)" data-ar="اكتشاف ثغرات أمنية حرجة في شركات كبرى عالمية و محلية (eBay, AliExpress...)"></li>
+                                <li data-fr="" data-en="Developed custom tools for automating penetration testing processes" data-ar="تطوير ادوات مخصصة لأتمتة عمليات الإختراق"></li>
+                                <li data-fr="" data-en="Prepared detailed technical reports for discovered vulnerabilities" data-ar="إعداد تقارير تقنية مفصلة للثغرات المكتشفة"></li>
+                                <li data-fr="" data-en="Active participation in Bug Bounty platforms (HackerOne, HackTheBox)" data-ar="مشاركة نشطة في منصات Bug Bounty (HackerOne, HackTheBox)"></li>
                             </ul>
                         </div>
                     </div>
@@ -141,17 +141,16 @@
 
             <!-- Projects Section -->
             <section class="section">
-                <h2 class="section-title" data-fr="Projets Notables" data-en="Notable Projects" data-ar="المشاريع البارزة">Projets Notables</h2>
+                <h2 class="section-title" data-fr="" data-en="Notable Projects" data-ar="المشاريع البارزة"></h2>
                 <div class="section-content">
                     <div class="projects-grid">
                         <div class="project-item">
                             <h3 class="project-title">Telmedeyn-Tool</h3>
                             <p class="project-description" 
-                               data-fr="Un outil de test d'intrusion complet et avancé visant à intégrer et simplifier de nombreux outils de test d'intrusion dans une seule plateforme"
+                               data-fr=""
                                data-en="A comprehensive and advanced penetration testing tool aiming to integrate and simplify numerous penetration testing tools into a single platform" 
                                data-ar="أداة اختبار اختراق شاملة ومتقدمة تهدف إلى دمج وتبسيط العديد من أدوات اختبار الاختراق في منصة واحدة">
-                                Un outil de test d'intrusion complet et avancé visant à intégrer et simplifier de nombreux outils de test d'intrusion dans une seule plateforme
-                            </p>
+                           </p>
                             <div class="project-tech">
                                 <span class="tech-tag">Python</span>
                                 <span class="tech-tag">Bash</span>
@@ -162,15 +161,14 @@
                         <div class="project-item">
                             <h3 class="project-title" data-fr="Мадлен" data-en="Мадлен" data-ar="مادلين">MADLIN</h3>
                             <p class="project-description"
-                               data-fr="Chatbot intelligent capable de conversion parole-texte et texte-parole avec traitement du langage naturel"
+                               data-fr=""
                                data-en="Intelligent chatbot capable of speech-to-text and text-to-speech conversion with natural language processing"
                                data-ar="روبوت محادثة ذكي قادر على تحويل الكلام إلى نص والنص إلى كلام مع معالجة اللغة الطبيعية">
-                                Chatbot intelligent capable de conversion parole-texte et texte-parole avec traitement du langage naturel
                             </p>
                             <div class="project-tech">
                                 <span class="tech-tag">Python</span>
                                 <span class="tech-tag">NLP</span>
-                                <span class="tech-tag" data-fr="Reconnaissance Vocale" data-en="Speech Recognition" data-ar="التعرف على الكلام">Reconnaissance Vocale</span>
+                                <span class="tech-tag" data-fr="" data-en="Speech Recognition" data-ar="التعرف على الكلام"></span>
                                 <span class="tech-tag">Flask</span>
                             </div>
                         </div>
