--- a/index.html
+++ b/index.html
@@ -238,15 +238,15 @@
                         </div>
                         <div class="personal-skill">
                             <span class="skill-icon">⚡</span>
-                            <span class="skill-text" data-fr="Adaptabilité et Innovation" data-en="Adaptability & Innovation" data-ar="القدرة على التكيف والابتكار">Adaptabilité et Innovation</span>
+                            <span class="skill-text" data-fr="" data-en="Adaptability & ****" data-ar="القدرة على التكيف و الحقد و ادكديك لفيم">Adaptabilité et Innovation</span>
                         </div>
                         <div class="personal-skill">
                             <span class="skill-icon"></span>
                             <span class="skill-text" data-fr="" data-en="" data-ar=""></span>
                         </div>
                         <div class="personal-skill">
-                            <span class="skill-icon">🛡️</span>
-                            <span class="skill-text" data-fr="Pensée défensive constante" data-en="Constant defensive thinking" data-ar="التفكير الدفاعي المستمر">التفكير الدفاعي المستمر</span>
+                            <span class="skill-icon"></span>
+                            <span class="skill-text" data-fr="" data-en="" data-ar=""</span>
                         </div>
                     </div>
                 </div>
