--- a/index.html
+++ b/index.html
@@ -234,12 +234,11 @@
                         </div>
                         <div class="personal-skill">
                             <span class="skill-icon">🔍</span>
-                            <span class="skill-text" data-fr="" data-en="Analytical and critical thinking in everything" data-ar="التفكير التحليلي و النقدي ف كل شي"></span>
+                            <span class="skill-text" data-fr="" data-en="Analytical and critical thinking in everything" data-ar="التفكير التحليلي و النقدي ف كل شي"> </span>
                         </div>
                         <div class="personal-skill">
                             <span class="skill-icon">⚡</span>
-                            <span class="skill-text" data-fr="" data-en="Adaptability & ****" data-ar="القدرة على التكيف و الحقد و ادكديك لفيم">Adaptabilité et Innovation</span>
-                        </div>
+                            <span class="skill-text" data-fr="" data-en="Adaptability & و اشوي ذاك" data-ar="القدرة على التكيف و الحقد و ادكديك لفيم"></span> </div>
                         <div class="personal-skill">
                             <span class="skill-icon"></span>
                             <span class="skill-text" data-fr="" data-en="" data-ar=""></span>
