--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                         </div>
                         <div class="personal-skill">
                             <span class="skill-icon">🧩</span>
-                            <span class="skill-text" data-fr="" data-en="Dealing with fools" data-ar="التعامل مع الأغبياء و لخليق لفّيْسد">Dealing with fools</span>
+                            <span class="skill-text" data-fr="" data-en="Dealing with fools" data-ar="التعامل مع الأغبياء">Dealing with fools</span>
                         </div>
                         <div class="personal-skill">
                             <span class="skill-icon">🔍</span>
@@ -234,7 +234,7 @@
                         </div>
                         <div class="personal-skill">
                             <span class="skill-icon">⚡</span>
-                            <span class="skill-text" data-fr="" data-en="Adaptability & a bit of that" data-ar="القدرة على التكيف و ادكديك لفيم">Adaptability & a bit of that</span>
+                            <span class="skill-text" data-fr="" data-en="Adaptability & a bit of that" data-ar="ْالقدرة على التكيف و الحقد و أدّكدِيك لفّيْمْ">Adaptability & a bit of that</span>
                         </div>
                     </div>
                 </div>
