--- a/index.html
+++ b/index.html
@@ -1,90 +1,142 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" dir="ltr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Expert en Cybersécurité et Spécialiste IA - Sid'Ahmed Mohamed Ejehah. Plus d'un an d'expérience en tests d'intrusion et développement d'IA.">
     <title>Sid'Ahmed Mohamed Ejehah - Curriculum Vitae</title>
+    <meta name="description" content="Expert en Cybersécurité et Spécialiste IA - Sid'Ahmed Mohamed Ejehah. Plus d'un an d'expérience en tests d'intrusion et développement d'IA.">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Inter:wght@300;400;500;600;700&family=Amiri:wght@400;700&family=Cairo:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Playfair+Display:wght@400;700&family=Cairo:wght@400;700&family=Amiri&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 </head>
 <body>
-
-<!-- Warning Overlay -->
-<div id="warning-overlay">
-    <div class="warning-box">
-        <h2>⚠ Attention ⚠</h2>
-        <p>Ce site contient des fonctionnalités interactives avancées. Continuez avec prudence.</p>
-        <button id="dismiss-warning">Je comprends</button>
-    </div>
-</div>
-
-<!-- Countdown Timer -->
-<div id="countdown-timer"></div>
-
-<!-- Language Switcher -->
-<div class="language-switcher">
-    <div class="language-buttons">
-        <button class="lang-btn" data-lang="fr">FR</button>
-        <button class="lang-btn" data-lang="en">EN</button>
-        <button class="lang-btn" data-lang="ar">AR</button>
-    </div>
-</div>
-
-<div class="container">
-    <!-- Header Section -->
-    <header class="header section">
-        <div class="header-content">
-            <div class="profile-section">
-                <div class="profile-image">
-                    <div class="profile-placeholder">SA</div>
-                </div>
-                <div>
-                    <h1 class="name" data-fr="Sid'Ahmed Mohamed Ejehah" data-en="Sid Ahmed Mohamed Ejehah" data-ar="سيداحمد محمد أجهاه">Sid'Ahmed Mohamed Ejehah</h1>
-                    <p class="title" data-fr="Expert Cybersécurité & IA" data-en="Cybersecurity Expert & AI Specialist" data-ar="خبير الأمن السيبراني و متخصص الذكاء الاصطناعي">Expert Cybersécurité & IA</p>
-                </div>
-            </div>
-            <div class="contact-info">
-                <div class="contact-item"><i class="fa fa-envelope icon"></i> <a href="mailto:sidahmedhedya59@gmail.com">sidahmedhedya59@gmail.com</a></div>
-                <div class="contact-item"><i class="fa fa-phone icon"></i> <a href="tel:+22241377131">+222 41 37 71 31</a></div>
-            </div>
+    <!-- Language Switcher -->
+    <div class="language-switcher">
+        <div class="language-buttons">
+            <!-- زر التحذير منفصل -->
+            <button id="risk-btn" style="background: linear-gradient(135deg, #ff4d4d, #ff0000); color: #fff; border: none; cursor: pointer; padding: 10px 20px; border-radius: 8px;">
+                Potential risk 🚫
+            </button>
+            <!-- أزرار اللغة كما هي -->
+            <button class="lang-btn" data-lang="en">🇬🇧 English</button>
+            <button class="lang-btn" data-lang="ar">🇲🇷 العربية</button>
         </div>
-    </header>
+    </div> 
 
-    <!-- Main Content -->
-    <main class="main-content">
-        <!-- Summary -->
-        <section class="section">
-            <h2 class="section-title" data-fr="Résumé" data-en="Summary" data-ar="ملخص">Résumé</h2>
-            <p class="summary-text" data-fr="Expert en cybersécurité avec plus d'un an..." data-en="Cybersecurity expert with over one year..." data-ar="خبير أمن سيبراني أكثر من سنة...">
-                Expert en cybersécurité avec plus d'un an d'expérience en tests d'intrusion et développement d'IA.
-            </p>
-        </section>
-
-        <!-- Skills -->
-        <section class="section">
-            <h2 class="section-title" data-fr="Compétences" data-en="Skills" data-ar="المهارات">Compétences</h2>
-            <div class="skills-grid">
-                <div class="skill-category">
-                    <h3 class="skill-category-title" data-fr="Sécurité" data-en="Security" data-ar="الأمن">Sécurité</h3>
-                    <div class="skill-items">
-                        <div class="skill-item">Pentesting</div>
-                        <div class="skill-item">Audit Réseau</div>
+    <div class="container" id="main-content">
+        <!-- Header Section -->
+        <header class="header">
+            <div class="header-content">
+                <div class="profile-section">
+                    <div class="profile-image">
+                        <div class="profile-placeholder">
+                            <span>ENG</span>
+                        </div>
+                    </div>
+                    <div class="profile-info">
+                        <h1 class="name">Sid'Ahmed Mohamed Ejehah</h1>
+                        <p class="title" data-fr="انت المسؤول الأول عن ما يمكن أن يحدث بعد ضغطك عل ذالك الزر" data-en="Entry-level cybersecurity and artificial intelligence specialist" data-ar="متخصص مبتدئ في مجال الأمن السيبراني والذكاء الاصطناعي">
+                        Entry-level cybersecurity and artificial intelligence specialist
+                        </p>
                     </div>
                 </div>
-                <div class="skill-category">
-                    <h3 class="skill-category-title" data-fr="IA & Dev" data-en="AI & Dev" data-ar="الذكاء الاصطناعي & التطوير">IA & Dev</h3>
-                    <div class="skill-items">
-                        <div class="skill-item">Python</div>
-                        <div class="skill-item">Machine Learning</div>
+                <div class="contact-info">
+                    <div class="contact-item">
+                        <span class="icon">📞</span>
+                        <a href="tel:+22241377131">41377131</a>
+                    </div>
+                    <div class="contact-item">
+                        <span class="icon">✉️</span>
+                        <a href="mailto:sidahmedhedya59@gmail.com">sidahmedhedya59@gmail.com</a>
+                    </div>
+                    <div class="contact-item">
+                        <span class="icon">📍</span>
+                        <span data-fr="Nouakchott, Mauritanie" data-en="Nouakchott, Mauritania" data-ar="نواكشوط، موريتانيا">Nouakchott, Mauritanie</span>
+                    </div>
+                    <div class="contact-item">
+                        <span class="icon">💬</span>
+                        <a href="https://t.me/gaaraKZG" target="_blank" data-fr="Discuter sur Telegram" data-en="Chat on Telegram" data-ar="تواصل معي عبر تيليجرام">تواصل معي عبر تيليجرام</a>
                     </div>
                 </div>
             </div>
-        </section>
-    </main>
-</div>
+        </header> 
 
-<script src="script.js"></script>
+        <!-- Main Content -->
+        <main class="main-content">
+            <!-- Professional Summary -->
+            <section class="section">
+                <h2 class="section-title" data-fr="" data-en="Professional Summary" data-ar="الملخص المهني">Résumé Professionnel</h2>
+                <div class="section-content">
+                    <p class="summary-text" 
+                       data-fr=""
+                       data-en="I am Sid'Ahmed Mohamed Ejehah born in 2002 in Rachid City. My educational path was different from what is commonly expected in the society where I grew up. Through continuous self-learning and hands-on practice, I have gradually developed technical skills in the fields listed below. This journey has allowed me to gain practical experience with real-world systems and on several occasions to help identify security weaknesses in both local and international platforms."
+                       data-ar="أنا سيد أحمد محمد أجهاه، من مواليد 2002 بمدينة الرشيد. كان مساري التعليمي مختلفًا عن المعتاد في المجتمع الذي نشأت فيه. ومن خلال التعلم الذاتي المستمر والممارسة العملية، طوّرت تدريجيًا مهارات تقنية في المجالات المذكورة أدناه. وقد أتاح لي هذا المسار اكتساب خبرة عملية مع أنظمة واقعية، وفي بعض الحالات المساهمة في اكتشاف ثغرات أمنية في منصات محلية ودولية.">
+                       Sid'Ahmed Mohamed Ejehah,
+                    </p>
+                </div>
+            </section> 
+
+            <!-- Skills Section -->
+            <section class="section">
+                <h2 class="section-title" data-fr="You are fully responsible for anything that happens after pressing that button" data-en="Technical Skills" data-ar="المهارات التقنية">Compétences Techniques</h2>
+                <div class="section-content">
+                    <div class="skills-grid">
+                        <div class="skill-category">
+                            <h3 class="skill-category-title" data-fr="" data-en="Cybersecurity" data-ar="الأمن السيبراني">Cybersécurité</h3>
+                            <div class="skill-items">
+                                <span class="skill-item" data-fr="" data-en="Penetration Testing" data-ar="اختبار الاختراق">Tests d'Intrusion</span>
+                                <span class="skill-item" data-fr="" data-en="Vulnerability Assessment" data-ar="تقييم الثغرات الأمنية">Évaluation des Vulnérabilités</span>
+                                <span class="skill-item">Kali Linux</span>
+                                <span class="skill-item">Bug Bounty</span>
+                                <span class="skill-item">OWASP Top 10</span>
+                                <span class="skill-item">Metasploit</span>
+                                <span class="skill-item">Burp Suite</span>
+                                <span class="skill-item">Nmap</span>
+                            </div>
+                        </div>
+                        <div class="skill-category">
+                            <h3 class="skill-category-title" data-fr="" data-en="Artificial Intelligence" data-ar="الذكاء الاصطناعي">Intelligence Artificielle</h3>
+                            <div class="skill-items">
+                                <span class="skill-item">Machine Learning</span>
+                                <span class="skill-item">Deep Learning</span>
+                                <span class="skill-item">NLP</span>
+                                <span class="skill-item">TensorFlow</span>
+                                <span class="skill-item">PyTorch</span>
+                                <span class="skill-item" data-fr="" data-en="Chatbot Development" data-ar="تطوير روبوتات المحادثة">Développement Chatbot</span>
+                                <span class="skill-item" data-fr="" data-en="Speech Recognition" data-ar="التعرف على الكلام">Reconnaissance Vocale</span>
+                                <span class="skill-item" data-fr="" data-en="Text-to-Speech" data-ar="تحويل النص إلى كلام">Synthèse Vocale</span>
+                            </div>
+                        </div>
+                        <div class="skill-category">
+                            <h3 class="skill-category-title" data-fr="" data-en="Programming" data-ar="البرمجة">Programmation</h3>
+                            <div class="skill-items">
+                                <span class="skill-item">Python</span>
+                                <span class="skill-item">JavaScript</span>
+                                <span class="skill-item">Bash/Shell</span>
+                                <span class="skill-item">SQL</span>
+                                <span class="skill-item">Flask/Django</span>
+                                <span class="skill-item" data-fr="" data-en="API Development" data-ar="تطوير واجهات البرمجة">Développement API</span>
+                                <span class="skill-item" data-fr="" data-en="Automation" data-ar="الأتمتة">Automatisation</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section> 
+
+            <!-- باقي الأقسام: Experience, Projects, Education, Personal Skills ... -->
+        </main>
+    </div> 
+
+    <!-- Overlay واجهة التحذير -->
+    <div id="risk-overlay">
+        <h1>⚠️ WARNING ⚠️</h1>
+        <p class="warning-text">You have triggered a potential risk! Interface compromised!</p>
+        <div class="countdown" id="countdown">10</div>
+        <button id="exit-btn">Exit & Return</button>
+    </div>
+
+    <script src="script.js"></script>
 </body>
+<footer style="text-align: center; padding: 20px; background-color: #f2f2f2; font-size: 14px; color: #333;">
+    <span id="footer-text">© جميع الحقوق محفوظة 2025 sidahmed - سيداحمد</span>
+</footer>
 </html>
